--- a/Certification App/Src/Admin BU-Wise-Records.fx.yaml
+++ b/Certification App/Src/Admin BU-Wise-Records.fx.yaml
@@ -1931,7 +1931,7 @@
                                                     NotificationList_CertificationApp,
                                                     5000
                                                 ),
-                                                (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || IsDeleted = false
+                                                (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || UserDeleted = false
                                             )
                                         ),
                                         ClearCollect(
@@ -1941,7 +1941,7 @@
                                                     NotificationList_CertificationApp,
                                                     5000
                                                 ),
-                                                Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && IsDeleted = false
+                                                Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && UserDeleted = false
                                             )
                                         ),
                                         ClearCollect(
@@ -4323,7 +4323,7 @@
                             {ID: MyPatch.ID},
                             {
                                 Title: MyPatch.Title,
-                                IsDeleted: true
+                                UserDeleted: true
                             }
                         )
                     ),
@@ -4336,7 +4336,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         ),
@@ -4347,7 +4347,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         )
