--- a/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
+++ b/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
@@ -2461,7 +2461,7 @@ Ask_Oues_Ans_Admin As screen:
                             NotificationList_CertificationApp,
                             5000
                         ),
-                        (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || IsDeleted = false
+                        (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || UserDeleted = false
                     )
                 ),
                 ClearCollect(
@@ -2471,7 +2471,7 @@ Ask_Oues_Ans_Admin As screen:
                             NotificationList_CertificationApp,
                             5000
                         ),
-                        Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && IsDeleted = false
+                        Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && UserDeleted = false
                     )
                 ),
                 ClearCollect(
@@ -2712,7 +2712,7 @@ Ask_Oues_Ans_Admin As screen:
                             {ID: MyPatch.ID},
                             {
                                 Title: MyPatch.Title,
-                                IsDeleted: true
+                                UserDeleted: true
                             }
                         )
                     ),
@@ -2725,7 +2725,7 @@ Ask_Oues_Ans_Admin As screen:
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         ),
@@ -2736,7 +2736,7 @@ Ask_Oues_Ans_Admin As screen:
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         )
