--- a/Certification App/Src/CertificationRecommendationScreen.fx.yaml
+++ b/Certification App/Src/CertificationRecommendationScreen.fx.yaml
@@ -2078,7 +2078,7 @@ CertificationRecommendationScreen As screen:
                                                 NotificationList_CertificationApp,
                                                 5000
                                             ),
-                                            (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || IsDeleted = false
+                                            (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || UserDeleted = false
                                         )
                                     ),
                                     ClearCollect(
@@ -2088,7 +2088,7 @@ CertificationRecommendationScreen As screen:
                                                 NotificationList_CertificationApp,
                                                 5000
                                             ),
-                                            Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && IsDeleted = false
+                                            Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && UserDeleted = false
                                         )
                                     ),
                                     ClearCollect(
@@ -3093,7 +3093,7 @@ CertificationRecommendationScreen As screen:
                             {ID: MyPatch.ID},
                             {
                                 Title: MyPatch.Title,
-                                IsDeleted: true
+                                UserDeleted: true
                             }
                         )
                     ),
@@ -3106,7 +3106,7 @@ CertificationRecommendationScreen As screen:
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         ),
@@ -3117,7 +3117,7 @@ CertificationRecommendationScreen As screen:
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         )
