--- a/Certification App/Src/Responsive Home Screen.fx.yaml
+++ b/Certification App/Src/Responsive Home Screen.fx.yaml
@@ -1485,7 +1485,7 @@
                                                 NotificationList_CertificationApp,
                                                 5000
                                             ),
-                                            (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || IsDeleted = false
+                                            (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || UserDeleted = false
                                         )
                                     ),
                                     ClearCollect(
@@ -1495,7 +1495,7 @@
                                                 NotificationList_CertificationApp,
                                                 5000
                                             ),
-                                            Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && IsDeleted = false
+                                            Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && UserDeleted = false
                                         )
                                     ),
                                     ClearCollect(
@@ -3089,7 +3089,7 @@
                             {ID: MyPatch.ID},
                             {
                                 Title: MyPatch.Title,
-                                IsDeleted: true
+                                UserDeleted: true
                             }
                         )
                     ),
@@ -3102,7 +3102,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         ),
@@ -3113,7 +3113,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         )
