--- a/Certification App/Src/ResponsiveCertificationDetail Screen.fx.yaml
+++ b/Certification App/Src/ResponsiveCertificationDetail Screen.fx.yaml
@@ -2638,7 +2638,7 @@
                             NotificationList_CertificationApp,
                             5000
                         ),
-                        (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || IsDeleted = false
+                        (Title = User().FullName && "been approved by your manager " & varMngrname in Notification) || ("has requested for" in Notification && Manager = User().FullName) || (Title = User().FullName && "been approved by ILD" in Notification) || UserDeleted = false
                     )
                 ),
                 ClearCollect(
@@ -2648,7 +2648,7 @@
                             NotificationList_CertificationApp,
                             5000
                         ),
-                        Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && IsDeleted = false
+                        Title = User().FullName && ("been approved by your manager " & varMngrname in Notification || "been approved by ILD" in Notification) && UserDeleted = false
                     )
                 ),
                 ClearCollect(
@@ -2889,7 +2889,7 @@
                             {ID: MyPatch.ID},
                             {
                                 Title: MyPatch.Title,
-                                IsDeleted: true
+                                UserDeleted: true
                             }
                         )
                     ),
@@ -2902,7 +2902,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         ),
@@ -2913,7 +2913,7 @@
                                 {ID: MyPatch.ID},
                                 {
                                     Title: MyPatch.Title,
-                                    IsDeleted: true
+                                    UserDeleted: true
                                 }
                             )
                         )
