--- a/Certification App/DataSources/CertificationApp-Security.json
+++ b/Certification App/DataSources/CertificationApp-Security.json
@@ -3,7 +3,7 @@
     "ApiId": "/providers/microsoft.powerapps/apis/shared_sharepointonline",
     "CdpRevision": {
       "BaseUrl": "/",
-      "LastChangedTimeString": "2023-06-06T16:32:53.9510000Z",
+      "LastChangedTimeString": "2023-09-06T21:41:49.4930000Z",
       "RevisionNumber": 1
     },
     "ConnectedDataSourceInfoNameMapping": {
@@ -32,6 +32,7 @@
       "ID": "ID",
       "Modified": "Modified",
       "OData__ColorTag": "Color Tag",
+      "Sign_x002d_off_x0020_status": "Sign-off status",
       "Title": "Title"
     },
     "DatasetName": "https://ilinksystemsinc449.sharepoint.com/sites/CertificationApp",
