--- a/Certification App/DataSources/NotificationList_CertificationApp.json
+++ b/Certification App/DataSources/NotificationList_CertificationApp.json
@@ -3,7 +3,7 @@
     "ApiId": "/providers/microsoft.powerapps/apis/shared_sharepointonline",
     "CdpRevision": {
       "BaseUrl": "/",
-      "LastChangedTimeString": "2023-06-06T16:32:53.9510000Z",
+      "LastChangedTimeString": "2023-09-06T21:41:49.4930000Z",
       "RevisionNumber": 1
     },
     "ConnectedDataSourceInfoNameMapping": {
@@ -23,6 +23,7 @@
       "{TriggerWindowEndToken}": "Trigger Window End Token",
       "{TriggerWindowStartToken}": "Trigger Window Start Token",
       "{VersionNumber}": "Version number",
+      "AdminDeleted": "AdminDeleted",
       "Author": "Created By",
       "Author#Claims": "Created By Claims",
       "ComplianceAssetId": "Compliance Asset Id",
@@ -30,8 +31,9 @@
       "Editor": "Modified By",
       "Editor#Claims": "Modified By Claims",
       "ID": "ID",
-      "IsDeleted": "IsDeleted",
+      "IsDeleted": "UserDeleted",
       "Manager": "Manager",
+      "ManagerDeleted": "ManagerDeleted",
       "Modified": "Modified",
       "Notification": "Notification",
       "OData__ColorTag": "Color Tag",
